Fixed issue with form clipping into top of screen

--- a/src/pages/Connections/Connections.css
+++ b/src/pages/Connections/Connections.css
@@ -1,5 +1,8 @@
 .connections-links {
     color: white;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
 .connections-link {
